# nex

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cli/: CMakeLists.txt
cli/src/: main.c
cli/src/commands/: commands.h  run.c
debugger/: CMakeLists.txt
debugger/src/: main.cpp
lib/: CMakeLists.txt
lib/include/nex/: nes.h
lib/src/: cartridge.c  cartridge.h  mapper.c  mapper.h  nes.c  nes.h  ppu.c  ppu.h
roms/: super_mario_bros.asm  super_mario_bros.lst
scripts/: nestest.sh  run-cpu-tests.sh
src/: cartridge.c  cartridge.h  commands.c  commands.h  main.cpp  mapper.c  mapper.h  nes.c  nes.h  nex.c  ppu.c  ppu.h  test_config.c  test_config.h
